# brewBuddies

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
brewBuddies/: manage.py
brewBuddies/brew/: forms.py  models.py  urls.py  views.py
brewBuddies/brew/migrations/: 0001_initial.py
brewBuddies/brew/templates/: base.html
brewBuddies/brew/templates/profile/: profile.html
brewBuddies/brew/templates/registration/: login.html  logout.html  register.html
brewBuddies/brewBuddies/: asgi.py  settings.py  urls.py  wsgi.py
brewBuddies/groups/: apps.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
brewBuddies/groups/migrations/: 0001_initial.py  0002_group_place.py
brewBuddies/profiles/: apps.py  decorators.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
brewBuddies/profiles/migrations/: 0001_initial.py  0002_alter_profile_profile_img.py
brewBuddies/profiles/templates/: base.html
brewBuddies/profiles/templates/profiles/: home.html  login_page.html  profile.html  register_page.html
brewBuddies/static/css/: login.css
brewBuddies/templates/: base.html
brewBuddies/templates/groups/: create_group.html  group_chat.html  group_detail.html  group_list.html  map.html  update_group.html  user_group_list.html  user_groups_list.html
brewBuddies/templates/profiles/: edit_profile.html  login_page.html  profile.html  register_page.html  user_search.html
