[tool.poetry]
name = "brewbuddies"
version = "0.1.0"
description = ""
authors = ["Golubev Artem <109762929+g0lubenk0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.1.0,<4.2.0"
pillow = "^10.1.0"
channels = "^4.0.0"
psycopg2 = "^2.9.9"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
